--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,3 +25,4 @@ jobs:
             php artisan config:cache
             php artisan route:cache
             php artisan view:cache
+            npm run build
