testing workflows on stage

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,6 +19,8 @@ jobs:
           script: |
             set -e # Exit immediately on error
             cd /home/support/web/workflowtoolstaging.godspeedoffers.com/public_html
+            git rm --cached routes/console.php  # Remove it from tracking while keeping it locally
+            git commit -m "Ignore config.php"
             git pull
             git reset --hard origin/main
             composer install --no-interaction --no-dev --prefer-dist
