--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,6 +24,7 @@ jobs:
             php artisan config:cache
             php artisan route:cache
             php artisan view:cache
+            npm run build
             sudo chown -R www-data:www-data /home/support/web/workflowtoolstaging.godspeedoffers.com/public_html/storage
             sudo chown -R www-data:www-data /home/support/web/workflowtoolstaging.godspeedoffers.com/public_html/bootstrap/cache
             sudo chmod -R 775 /home/support/web/workflowtoolstaging.godspeedoffers.com/public_html/storage
