--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
         "@fortawesome/free-solid-svg-icons": "^6.6.0",
         "@fortawesome/react-fontawesome": "^0.2.2",
         "@heroicons/react": "^2.1.4",
+        "papaparse": "^5.5.3",
         "react-router-dom": "^6.27.0"
     }
 }
